--- a/.env.example
+++ b/.env.example
@@ -2,5 +2,8 @@ MINECRAFT_USERNAME=
 MINECRAFT_PASSWORD=
 MINECRAFT_TYPE=
 
+SERVER_HOST=2b2t.org
+SERVER_PORT=25565
+
 PROXY_USERNAME=
 PROXY_PASSWORD=
